added swagger docs for bracelet diagram
